# Razzoozle

./: .design-tokens.json  .dockerignore  .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE-FABLE-5.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  HOST_INTEGRATION.md  PLUGINS.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.zh.md  RELEASE_NOTES_v1.1.0.md  checklist.md  compose.node.yml  compose.rust.yml  compose.yml  deletefailed-translations.json  design.md  design.tokens.json  docker-compose.postgres.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust_events.txt  style-dictionary.config.cjs  test_pg.sh  translations.json  tsconfig.json  user-delete-translations.json
.design-sync/: NOTES.md  config.json  conventions.md  i18n-preview.ts
.playwright-mcp/: page-2026-06-17T08-22-23-342Z.yml  page-2026-06-17T08-25-41-201Z.yml  page-2026-06-17T08-45-14-691Z.yml  page-2026-06-17T19-02-59-837Z.yml  page-2026-06-17T20-00-51-301Z.yml  page-2026-06-17T20-19-27-068Z.yml  page-2026-06-17T21-09-31-191Z.yml  page-2026-06-17T21-42-32-098Z.yml  page-2026-06-17T22-36-56-444Z.yml  page-2026-06-17T23-14-04-249Z.yml
db/: README.md
docker/: comfy-img2img-workflow.json  comfy-workflow.json  nginx.conf  supervisord.conf
docs/: Configuration.md  KAHOOT-GAP-ANALYSIS-v2.md  KAHOOT-GAP-ANALYSIS.md  LOW-LATENCY-MODE.md  OPERATIONS.md  README.md  RECONNECT-LATENCY-PLAN.md  Self-Hosting.md  Theming.md  build-baseline.md  rust-port-event-inventory.md  rust-port-phase2-plan.md  rust-port-plan.md  rust-v2-plan.md
e2e/: answer-flow.spec.ts  game-lifecycle.spec.ts  package.json  playwright.config.ts
rust/: Cargo.toml  Dockerfile  README.md  config  gate.sh  rust-toolchain.toml
rust/.cargo/: config.toml
rust/engine/: Cargo.toml
rust/engine/src/: achievements.rs  chunks.rs  eval.rs  lib.rs  round_recap.rs  scoring.rs  state.rs
rust/engine/src/state/: accum.rs  achievement_awards.rs  mod.rs  recap.rs  results.rs  tests.rs
rust/protocol/: Cargo.toml
rust/protocol/bindings/: AIDistractorsGeneratedPayload.ts  AIErrorPayload.ts  AIImageProviderConfig.ts  AIImageSettings.ts  AIProviderConfig.ts  AIProviderPublic.ts  AISetSettingsSuccessPayload.ts  AISettingsPayload.ts  AISettingsPublic.ts  AITestResult.ts  AITestResultPayload.ts  AITextSettingsPublic.ts  AchievementConfigEntry.ts  AnimatedBackgroundConfig.ts  AnimatedBackgroundType.ts  AnimatedBackgroundsConfig.ts  AnimationConfig.ts  AnswerAck.ts  AnswerAckReason.ts  BackgroundUploadPayload.ts  CatalogEntry.ts  CatalogSource.ts  ClockPing.ts  ClockPong.ts  ConnectPayload.ts  CreateGamePayload.ts  DisconnectPayload.ts  DisplayDisconnectPayload.ts  DisplayPairPayload.ts  DisplayPairSuccessPayload.ts  DisplayPingPayload.ts  DisplayRegisterPayload.ts  DisplayRegisteredPayload.ts  DisplayStatus.ts  DisplayStatusPayload.ts  EditImagePayload.ts  EndGamePayload.ts  EndScreen.ts  EnhancePromptPayload.ts  FinishedData.ts  (+117 more)
rust/protocol/src/: constants.rs  game.rs  lib.rs  manager.rs  media_ai.rs  media_usage.rs  player.rs  quizz.rs  results_display.rs  status.rs  theme.rs
rust/server/: Cargo.toml  fixture-quiz-alltypes.json
rust/server/src/: db.rs  main.rs  media_ai.rs  state.rs
rust/server/src/auth/: mod.rs
rust/server/src/bot/: manager.rs  mod.rs
rust/server/src/db/: catalog.rs  classes.rs  config.rs  labels.rs  media.rs  mod.rs  pins.rs  quizz.rs  results.rs  submissions.rs  tests_classes_bulk.rs  theme.rs  user_ai.rs  users.rs
rust/server/src/db/users/: mod.rs  tests_users_bulk.rs  tests_users_delete.rs
rust/server/src/http/: achievements.rs  assets.rs  assignments.rs  client_events.rs  emoji_pin.rs  login.rs  logs.rs  metrics.rs  mod.rs  observability.rs  plugins.rs  result_og.rs  skeleton.rs  solo.rs  static_files.rs  submit.rs  users.rs
rust/server/src/http/skeleton/: bundle.rs  mod.rs
rust/server/src/media_ai/: comfyui.rs  handlers.rs  mod.rs  throttle.rs
rust/server/src/socket/: ai.rs  ai_config.rs  ai_http.rs  ai_provider.rs  ai_ratelimit.rs  ai_secrets.rs  ai_utils.rs  ai_validate.rs  auth.rs  clock_ping.rs  cooldown.rs  display.rs  game.rs  lifecycle.rs  metrics.rs  mod.rs  player.rs  results.rs  reveal_helpers.rs  status_emit.rs  validation.rs
rust/server/src/socket/lifecycle/: mod.rs  payloads.rs  tests.rs  timing.rs
rust/server/src/socket/manager/: auth.rs  catalog.rs  classes.rs  config.rs  config_helper.rs  game_flow.rs  game_state.rs  games_list.rs  labels.rs  media.rs  mod.rs  players.rs  plugins.rs  plugins_zip.rs  public.rs  quizz.rs  students.rs  submissions.rs  theme.rs  theme_templates.rs  user_ai.rs
rust/server/src/socket/manager/game_flow/: mod.rs  pacing.rs
rust/server/src/socket/manager/media/: files.rs  mod.rs  validate.rs
rust/server/src/socket/manager/theme/: apply.rs  mod.rs  skeleton.rs  uploads.rs  validate.rs
rust/server/src/socket/player/: answer.rs  login.rs  mod.rs  session.rs
rust/server/src/state/: empty_grace.rs  eviction.rs  game.rs  mod.rs  rate_limit.rs  registry.rs  snapshot.rs  tests.rs
rust/spikes/golden-frames/: fixture-quiz.json
scripts/: TWIN-PARITY-README.md  auto-deploy-poll.sh  backfill-e4e5-blobs.mjs  backup-db.sh  check-guardrails.sh  check-key-refs.sh  check-locales.sh  check-manager-tokens.sh  deploy.sh  detect-gaps.sh  locale-sync.mjs  migrate-apply.sh  (+11 more)
(+264 files in other folders)
