[package]
name = "razzoozle-protocol"
version = "0.1.0"
edition = "2021"
description = "Wire-protocol types for the Razzoozle socket protocol (TS->Rust port, Phase 1)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# "serde-compat" is a default feature of ts-rs 10 — no explicit opt-in needed.
ts-rs = "10"
