[package]
name = "razzoozle-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
socketioxide = { version = "0.15", features = ["state"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
razzoozle-protocol = { path = "../protocol" }
razzoozle-engine = { path = "../engine" }

[profile.release]
opt-level = 3
