[package]
name = "razzoozle-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
socketioxide = { version = "0.15", features = ["state"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
regex = "1"
lazy_static = "1.4"
razzoozle-protocol = { path = "../protocol" }
razzoozle-engine = { path = "../engine" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
# Plugin ZIP import (spec_plugins.md ruling 3 — orchestrator-approved).
# deflate-flate2-zlib-rs is the minimal pure-Rust deflate backend (the plain
# "deflate" meta-feature would additionally pull the zopfli encoder).
prometheus = "0.13"
zip = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
# WP3 — WebP transcode for media uploads + AI-generated images (parity with Node toWebp).
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "jpeg_rayon", "webp"] }
subtle = "2.6.1"
argon2 = "0.5"
# Already resolved transitively via argon2's password-hash chain (see Cargo.lock);
# declared directly here only to expose it for session-token hashing (X2a).
sha2 = "0.10"
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }

# test-util only actually matters for `cargo test` (paused-clock timer tests in
# socket/cooldown.rs), but Cargo unifies feature flags for a dep across the
# whole build — declaring it here (rather than [dependencies]) keeps it a
# dev-only addition that never ships in a release binary.
[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = 3
